<resources>
    <string name="app_name">L\'Ecole Des Loustics</string>

    <!-- Accueil -->
    <string name="accueil_invite">Jouer en tant qu\'invité</string>
    <string name="accueil_creer_compte">Créer un compte</string>
    <string name="accueil_liste_comptes">Liste des utilisateurs</string>
    <string name="accueil_connexion">Se connecter</string>

    <!-- Connexion et inscription-->
    <string name="sign_in_header">Qui est-ce ?</string>
    <string name="sign_in_action">Connexion</string>

    <string name="sign_up_header">Tu es nouveau ? Inscris-toi !</string>
    <string name="sign_up_action">Inscription</string>

    <string name="sign_first_name">Prénom</string>
    <string name="sign_last_name">Nom</string>

    <!-- Menu Principal -->
    <string name="main_menu_subject">Exercices</string>
    <string name="main_menu_trophies">Trophées</string>
    <string name="main_menu_options">Options</string>
    <string name="main_menu_logout">Déconnexion</string>
    <string name="main_menu_hello">Bienvenue</string>

    <!-- Choix matière -->
    <string name="subjects_header">Choisis une matière</string>
    <string name="subjects_maths">Mathématiques</string>
    <string name="subjects_french">Français</string>
    <string name="subjects_history">Histoire</string>
    <string name="subjects_geography">Géoraphie</string>
    <string name="exercices_header">Choisis un exercice</string>

</resources>